--- a/data/generate.css
+++ b/data/generate.css
@@ -8,6 +8,10 @@ td {
   vertical-align: top;
 }
 
+.form-horizontal .form-group {
+  margin-left: 0;
+}
+
 #passwordCell {
   border-bottom: none;
   border-right: 1px solid black;
